--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </li>
         </ul>
 
+        <!-- navbar -->
         <nav class="first-nav">
             <ul class="first-nav-list">
                 <li class="first-nav-item">
@@ -62,6 +63,94 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="search">
+            <form class="search-form">
+                <input type="text" class="search-input" placeholder="Search">
+                <button class="search-btn">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+        </div>
+
+        <nav class="second-nav">
+            <ul class="second-nav-list">
+                <li class="second-nav-item">
+                    <a href="#" class="second-nav-link">Furniture</a>
+                    <div class="dropdown">
+                        <ul class="dropdown-first-list">
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Sofas</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Sectionals</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Daybeds & Chaises</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Consolas & Credenzas</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Chairs</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Benches & Ottomans</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Dressers & Chests</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Dining Tables</a>
+                            </li>
+                        </ul>
+                        <ul class="dropdown-second-list">
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Lampert</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Baxter</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Channing</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Maxime</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Talitha</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Rider</a>
+                            </li>
+                            <li class="dropdown-list-item">
+                                <a href="#" class="dropdown-list-link">Goldfinger</a>
+                            </li>
+                        </ul>
+                        <img src="images/dropdown-image.jpg" alt="wall with mirror" class="dropdown-image">
+                    </div>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Rooms</a>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Kitchen</a>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Outdoor</a>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Lighting</a>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Bed & Bath</a>
+                </li>
+                <li class="second-nav-item">
+                    <a href="" class="second-nav-link">Window</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- end of navbar -->
     </div>
 </body>
 </html>
