--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@
             </div>
         </section>
         <!-- end of bestselling furniture -->
+
+        <!-- gallery -->
+        <section class="gallery">
+            <img src="images/gallery-img-1.jpeg" alt="living room" class="gallery-img gallery-img-1">
+            <img src="images/gallery-img-2.jpeg" alt="desk" class="gallery-img gallery-img-2">
+            <img src="images/gallery-img-3.jpeg" alt="couch" class="gallery-img gallery-img-3">
+            <img src="images/gallery-img-4.jpeg" alt="chaise" class="gallery-img gallery-img-4">
+            <img src="images/gallery-img-5.jpeg" alt="cubic shelves" class="gallery-img gallery-img-5">
+            <img src="images/gallery-img-6.jpeg" alt="modern living room" class="gallery-img gallery-img-6">
+            <img src="images/gallery-img-7.jpeg" alt="outside patio table" class="gallery-img gallery-img-7">
+            <img src="images/gallery-img-8.jpeg" alt="loft bed" class="gallery-img gallery-img-8">
+            <img src="images/gallery-img-9.jpeg" alt="outside bed" class="gallery-img gallery-img-9">
+            <img src="images/gallery-img-10.jpeg" alt="living room with windows" class="gallery-img gallery-img-10">
+            <img src="images/gallery-img-11.jpeg" alt="chair in a field" class="gallery-img gallery-img-11">
+            <img src="images/gallery-img-12.jpeg" alt="furniture construction" class="gallery-img gallery-img-12">
+        </section>
+        <!-- end of gallery -->
     </div>
 </body>
 </html>
