--- a/index.html
+++ b/index.html
@@ -255,6 +255,22 @@
             <img src="images/gallery-img-12.jpeg" alt="furniture construction" class="gallery-img gallery-img-12">
         </section>
         <!-- end of gallery -->
+
+        <!-- contact -->
+        <section class="contact">
+            <h1 class="contact-heading">Join us and be in the know</h1>
+            <form class="contact-form">
+                <input type="text" class="contact-input" placeholder="Enter mail address">
+                <input type="submit" class="contact-btn" placeholder="Sign Up">
+            </form>
+        </section>
+        <!-- end of contact -->
+
+        <!-- footer -->
+        <footer class="footer">
+            <p>&copy; CodeAndCreate. All rights reserved</p>
+        </footer>
+        <!-- end of footer -->
     </div>
 </body>
 </html>
